tests/fail/unknown_input.rs
#[log_attributes::log(info, "{fn} was executed with {a}")]
fn unknown_input() {}

fn main() {}
